fix css issue and update

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gpt3",
-  "version": "0.1.0",
+  "name": "gpt3-convert-figma-template",
+  "version": "0.1.5",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
